--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "classnames": "^2.2.6",
     "date-fns": "^2.19.0",
     "gray-matter": "^4.0.2",
+    "mongodb": "^3.6.6",
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
