--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "better-scroll": "^2.4.1",
     "classnames": "^2.2.6",
     "date-fns": "^2.19.0",
     "gray-matter": "^4.0.2",
