--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1"
   },
