--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@jusda-tools/jusda-extract": "^0.0.1",
+    "@types/express": "^4.17.13",
     "antd": "^4.16.8",
     "better-scroll": "^2.4.1",
     "classnames": "^2.2.6",
